2023-06-22. Несуществующие маршруты (404 page). Лоадер загрузки страниц

--- a/02_Module/21/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/02_Module/21/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -3,6 +3,7 @@
     width: var(--sidebar-width);
     background: var(--inverted-bg-color);
     position: relative;
+    overflow: hidden;
     transition: width 0.3s;
 }
 
